# KW4_parser

./: .env.example  README.md  app.py  pyproject.toml
config/: config.py  table_of_content.py
controller/: controller.py
controllers/: hh_controller.py  hhsj_controller.py  saver_controller.py  sj_controller.py  vacancy_controller.py
data/: raw_data.json  raw_data.json.0  raw_data.json.0.json  raw_data.json.1  raw_data.json.1.json  raw_data.json.10  raw_data.json.10.json  raw_data.json.11  raw_data.json.11.json  raw_data.json.12  raw_data.json.12.json  raw_data.json.13  raw_data.json.14  raw_data.json.15  raw_data.json.16  raw_data.json.17  raw_data.json.18  raw_data.json.19  raw_data.json.2  raw_data.json.2.json  raw_data.json.3  raw_data.json.3.json  raw_data.json.4  raw_data.json.4.json  raw_data.json.5  raw_data.json.5.json  raw_data.json.6  raw_data.json.6.json  raw_data.json.7  raw_data.json.7.json  raw_data.json.8  raw_data.json.8.json  raw_data.json.9  raw_data.json.9.json  raw_data_SuperJob.json  raw_data_example.json  vacancy.json  vacancy_from_HH.json
main/: app.py  main.py  vacancy.json
models/: vacancy_list.py  vacancy_model.py
src/: decorators.py  first.py  model.py  router.py  savers.py  utils.py  vacancy.py
static/css/: styles.css
templates/: 404.html  about.html  answer.html  base.html  files1.html  index.html  request_api.html  request_files.html  tttt1.html  wait.html
tests/: conftest.py  file_for_easy_test.json  test_return.py  test_savers.py  test_utils.py  test_vacancy.py
view/: help_view.py  set_param_view.py  vacancy_list_view.py
