[tool.poetry]
name = "kw4-parser"
version = "0.1.0"
description = ""
authors = ["kirsansan <kirill_home@mail.ru>"]
readme = "README.md"
packages = [{include = "kw4_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
